# nika

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dependencies.cmake  docker-compose.yml  idesa.ini  mkdocs.yml  nika.ini  repo.path
client/: .eslintrc.json  README.md  package.json  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.prod.js
client/assets/: main.css
client/public/: index.html
client/src/: App.tsx  index.tsx
client/webpack/: devServer.js  optimization.js  webpack.base.js
docs/: changelog.md  index.md  license.md  thirdparty.md
docs/agents/: errorMessageReplyAgent.md  messageReplyAgent.md  messageTopicClassificationAgent.md  speechToTextAgent.md  textToSpeechAgent.md
interface/: README.md  package-lock.json  package.json
problem-solver/: CMakeLists.txt
problem-solver/py/CommonTestModule/: CMakeLists.txt  CommonTestModule.cpp  CommonTestModule.hpp  CommonTestService.hpp
problem-solver/py/MessageClassificationModule/: CMakeLists.txt  MessageClassificationModule.cpp  MessageClassificationModule.hpp  MessageClassificationService.hpp
problem-solver/py/SpeechToTextAgent/: CMakeLists.txt  SpeechToTextModule.cpp  SpeechToTextModule.hpp  SpeechToTextService.hpp
problem-solver/py/TextToSpeechAgent/: CMakeLists.txt  TextToSpeechModule.cpp  TextToSpeechModule.hpp  TextToSpeechService.hpp
requirements/: dev.txt
scripts/: build_interface.sh  build_kb.sh  build_problem_solver.sh  docker_entrypoint.sh  install_deps_ubuntu.sh  install_project.sh  install_subsystems.sh  prepare_kb.sh  prepare_platform.sh  run_cpp_tests.sh  run_interface.sh  run_sc_server.sh  run_scweb.sh  set_vars.sh
(+445 files in other folders)
